# pywet

./: LICENSE  README.md  main.py  pyproject.toml
scripts/: open-project-with-cursor.bat  test-pypi-package-install.bat
src/pywet/: __init__.py
tests/: smoke_test.py  test_main.py
